--- a/Demo.Domain/Demo.Domain.csproj
+++ b/Demo.Domain/Demo.Domain.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <Compile Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\Service\" />
   </ItemGroup>
 
   <ItemGroup>
